--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
 
-  <body>
-    <h1>Este es el Dubai Team</h1>
-    <p>Integrantes team: Freddy Beltran, Frebel
-        Kevin Florez, El profe
-        Jaqueline Carrascal, The queen of flow
-        Laura Martinez, Martuchis, alias vice
-        Elkin Velasco, Itha7
-    </p>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+
+<body>
+  <h1>Este es el Dubai Team</h1>
+  <p>Integrantes team: <br>
+
+    Freddy Beltran, Frebel;<br>
+    Kevin Florez, El profe;<br>
+    Jaqueline Carrascal, The queen of flow; <br>
+    Laura Martinez, Martuchis, alias vice; <br>
+    Elkin Velasco, Itha7. <br>
+    
+  </p>
+</body>
+
 </html>
