--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     Jaqueline Carrascal, The queen of flow; <br>
     Laura Martinez, Martuchis, alias vice; <br>
     Elkin Velasco, Itha7. <br>
-    
+<a href="https://github.com/Ithamar7/Eje2">Link al repositorio</a>
   </p>
 </body>
 
