--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-</head>
+  <body>
+    <h1>Este es el Dubai Team</h1>
+    <p>
+      Integrantes team: <br />
 
-<body>
-  <h1>Este es el Dubai Team</h1>
-  <p>Integrantes team: <br>
-
-    Freddy Beltran, Frebel;<br>
-    Kevin Florez, El profe;<br>
-    Jaqueline Carrascal, The queen of flow; <br>
-    Laura Martinez, Martuchis, alias vice; <br>
-    Elkin Velasco, Itha7. <br>
-<a href="https://github.com/Ithamar7/Eje2">Link al repositorio</a>
-  </p>
-</body>
-
+      Freddy Beltran, Frebel;<br />
+      Kevin Florez, El profe;<br />
+      Jaqueline Carrascal, The queen of flow; <br />
+      Laura Martinez, Martuchis, alias vice; <br />
+      Elkin Velasco, Itha7. <br />
+      <a href="https://github.com/Ithamar7/Eje2">Link al repositorio</a>
+    </p>
+  </body>
 </html>
