--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
   <body>
     <h1>Este es el Dubai Team</h1>
     <p>
-      Integrantes team: <br />
-
+    <u>Integrantes team: </u><br />
+      
       Freddy Beltran, Frebel;<br />
       Kevin Florez, El profe;<br />
       Jaqueline Carrascal, The queen of flow; <br />
-      Laura Martinez, Martuchis, alias vice; <br />
+      Laura Martinez, Nilia; <br />
       Elkin Velasco, Itha7. <br />
       <a href="https://github.com/Ithamar7/Eje2">Link al repositorio</a>
+      
     </p>
   </body>
 </html>
