--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <p>
     <u>Integrantes team: </u><br />
       
-      Freddy Beltran, Frebel;<br />
-      Kevin Florez, El profe;<br />
-      Jaqueline Carrascal, The queen of flow; <br />
-      Laura Martinez, Nilia; <br />
-      Elkin Velasco, Itha7. <br />
+      Freddy Beltran, <b>Frebel</b> <br />
+      Kevin Florez, <b>El profe</b> <br />
+      Jaqueline Carrascal, <b>JaCaPi</b> <br />
+      Laura Martinez, <b>Nilia</b> <br />
+      Elkin Velasco, <b>Itha7</b> <br />
       <a href="https://github.com/Ithamar7/Eje2">Link al repositorio</a>
       
     </p>
