--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <h1>Este es el Dubai Team</h1>
     <p>
-    <u>Integrantes team: </u><br />
-      
+    <u>Integrantes Team: </u><br />
+      <br />
       Freddy Beltran, <b>Frebel</b> <br />
       Kevin Florez, <b>El profe</b> <br />
       Jaqueline Carrascal, <b>JaCaPi</b> <br />
