--- a/Sprint/Formulario.html
+++ b/Sprint/Formulario.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <body bgcolor=#0099FF>
+    
   </head>
 
   <body>
+    
     <h3>TABLA PARA CALCULAR IMC</h3>
 
     <p>Ingrese los datos como estudiante para tener un calculo:</p>
@@ -79,5 +81,6 @@
       <input type="submit" value="Enviar" />
       <input type="reset" value="Borrar campos" />
     </form>
+    <img src="IMAGEN_CLINICA.PNG" width="400px" height="20px">
   </body>
 </html>
