--- a/Sprint/index.html
+++ b/Sprint/index.html
@@ -17,7 +17,7 @@
       Jaqueline Carrascal, <b>JaCaPi</b> <br />
       Laura Martinez, <b>Nilia</b> <br />
       Elkin Velasco, <b>Itha7</b> <br />
-      <a href="https://github.com/Ithamar7/Eje2">Link al repositorio</a>
+      <a href="https://github.com/Ithamar7/Eje2/tree/main/Sprint">Link al repositorio</a>
       
     </p>
   </body>
